--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,11 +3,11 @@
 one:
   name: MyString
   email: MyString
-  passworddigest: MyString
+  password_digest: MyString
   image_url: MyString
 
 two:
   name: MyString
   email: MyString
-  passworddigest: MyString
+  password_digest: MyString
   image_url: MyString
